--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,8 @@
 ---
+import Trending from '@/components/home/trending.astro';
 import Layout from '../layouts/Layout.astro';
 ---
 
 <Layout>
-	
+    <Trending/>
 </Layout>
