--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,10 +2,8 @@
 import FAQ from '@/components/home/FAQ.astro';
 import Layout from '@/layouts/Layout.astro';
 import { iconMap } from '@/lib/blogs/icons';
-import { getSupabaseClient } from '@/lib/supabase';
-const { env } = Astro.locals.runtime;
+import { supabase } from '@/lib/supabase';
 
-const supabase = getSupabaseClient(env.SUPABASE_URL, env.SUPABASE_ANON_KEY);
 const [categories, latestPosts, featuredPosts] = await Promise.all([
   supabase.from('categories').select('*').then(res => res.data),
   supabase.from('draft').select('*').order('created_at', { ascending: false }).limit(5).then(res => res.data),
