--- a/src/components/home/Featured.astro
+++ b/src/components/home/Featured.astro
@@ -33,7 +33,7 @@ if (featured) {
       width={800}
       height={450}
         src={featured.thumb} 
-        alt={featured.title} 
+        alt={featured.slug} 
         class="w-full aspect-video md:h-full object-cover group-hover:scale-105 transition-transform duration-500" 
         loading="lazy"
       />
@@ -55,7 +55,7 @@ if (featured) {
               width={128}
               height={80}
               src={article.thumb} 
-              alt={article.title} 
+              alt={article.slug} 
               class="w-28 h-20 md:w-32 md:h-24 object-cover rounded-lg flex-shrink-0 group-hover:scale-105 transition-transform duration-300" 
               loading="lazy"
             />
