--- a/src/components/home/TopStories.astro
+++ b/src/components/home/TopStories.astro
@@ -15,7 +15,7 @@ const topStories = await supabase.from("draft").select("*").eq("status", "public
             width={400}
             height={300}
             src={story.thumb} 
-            alt={story.title} 
+            alt={story.slug} 
             class="w-full h-48 object-cover group-hover:scale-105 transition-transform duration-300" 
           />
           <div class="p-4 bg-white dark:bg-gray-800">
