--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -5,6 +5,7 @@ import Footer from "../components/Footer.astro";
 import Toasts from "@/components/Toasts";
 import Loading from "@/components/Loading";
 import BreadCrumbs from "@/components/BreadCrumbs.astro";
+import Cookie from "@/components/Cookie.astro";
 
 
 const cookies = Astro.cookies.get('theme')?.value ||  "light";
@@ -57,6 +58,7 @@ const {
     <div class="w-full h-12"></div>
     <Toasts client:load/>
     <Loading client:load/>
+    <Cookie/>
     <BreadCrumbs />
     <slot />
     <Footer/>
