--- a/src/components/home/Featured.astro
+++ b/src/components/home/Featured.astro
@@ -52,7 +52,7 @@ if (featured) {
             <OptimizedImage
               src={article.thumb} 
               alt={article.slug} 
-              class="w-28 h-20 md:w-32 md:h-24 object-cover rounded-lg flex-shrink-0 group-hover:scale-105 transition-transform duration-300" 
+              class="aspect-square w-20 h-20 object-cover rounded-lg flex-shrink-0 group-hover:scale-105 transition-transform duration-300" 
             />
             <h3 class="text-sm md:text-base font-semibold text-gray-800 dark:text-gray-200 group-hover:text-blue-500 line-clamp-2">
               {article.title}
