--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,10 +1,14 @@
+---
+import OptimizedImage from "./home/OptimizedImage.astro";
+---
+
 <footer class="bg-bg-secondary text-text-primary w-screen p-6 mt-12">
   <div
     class="max-w-7xl mx-auto flex flex-col md:flex-row items-center md:justify-between gap-6"
   >
     <div class="flex flex-col items-center md:items-start gap-1">
       <div class="flex items-center gap-3">
-        <img src="/logo.png" alt="EchoBlog Logo" class="w-10 h-10" />
+        <OptimizedImage src="/logo.png" alt="EchoBlog Logo" class="w-10 h-10 rounded-full" />
         <h3 class="text-2xl font-semibold">{import.meta.env.NAME}</h3>
       </div>
       <p class="text-sm text-text-secondary italic">
