--- a/src/components/home/OptimizedImage.astro
+++ b/src/components/home/OptimizedImage.astro
@@ -31,6 +31,11 @@ const { src, alt, class: className = "" } = Astro.props;
     filter: blur(0);
     opacity: 1;
   }
+
+  .optimized-img:hover {
+    transition: all 0.5s ease-in-out;
+    transform: scale(1.02);
+  }
 </style>
 
 <script>
