--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -8,7 +8,7 @@ import OptimizedImage from "./home/OptimizedImage.astro";
   >
     <div class="flex flex-col items-center md:items-start gap-1">
       <div class="flex items-center gap-3">
-        <OptimizedImage src="/logo.png" alt="EchoBlog Logo" class="w-10 h-10 rounded-full" />
+        <OptimizedImage src="/logo.ico" alt="EchoBlog Logo" class="w-10 h-10 rounded-full" />
         <h3 class="text-2xl font-semibold">{import.meta.env.NAME}</h3>
       </div>
       <p class="text-sm text-text-secondary italic">
